fix auth on safari

--- a/src/widgets/MainHeader/MainHeaderProfile/MainHeaderProfile.module.scss
+++ b/src/widgets/MainHeader/MainHeaderProfile/MainHeaderProfile.module.scss
@@ -32,6 +32,7 @@
             position: relative;
             width: 100%;
             text-decoration: none;
+            background-color: transparent;
 
             color: #212121;
 
